2003-10-31 Klaus Flittner <klaus_flittner@gmx.de>

	* src/SDCCcse.c (updateSpillLocation): fixed bug #808027

2003-10-31 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c (linkEdit): "fixed" bug #833605
	* src/SDCCast.c (decorateType): fixed bug #832664

2003-10-31  Borut Razem <borut.razem@siol.net>

	* support\cpp2\cpplex.c: fixed for SDCPP:
	  comments(when executed with -C option) and _asm blocks
	  were included even if they where in skipped #if block.
	  Applied solution from GCC cpp 3.3.2

2003-10-31  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex: sdcc now understands both formats:
	  '# <line_number> <file_name>' and
	  '#line <line_number> <file_name>'
	* support/cpp2/cppmain.c: sdcpp now generates the standard
	  '# <line_number> <file_name>' instead of former
	  '#line <line_number> <file_name>'

2003-10-30  Borut Razem <borut.razem@siol.net>

	* support/cpp2/cpphash.h,
	* support/cpp2/cpplib.h
	* support/cpp2/cpplex.c,
	* support/cpp2/cppmain.c,
	* support/cpp2/cppinit.c: fixed bug #828015 - Syntax variation for _asm character constants

2003-10-30 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed a number of problems revealed by bug #827883.
	* src/SDCCloop.c (loopInvariants): Spill location of the
	result operand should be recomputed if extracted from
	a loop. Also, don't extract assignments of an iTemp
	from a literal.
	* src/SDCCast.c (isConformingBody): loop reversal should
	not occur if the control variable is involved with a
	relational operator.

2003-10-28 Bernhard Held <bernhard@bernhardheld.de>

	* .version: bumped to 2.3.6 to reflect the big improvements
	made by Erik and Klaus. Thanks!

2003-10-28 Klaus Flittner <klaus_flittner@gmx.de>

	Replaced the livrange code.
	* src/SDCClrange.c: added new LR code
	* src/SDCCloop.c,
	* src/SDCCBBlock.h: removed remainig parts from old LR code
	* src/ds390/ralloc.c,
	* src/ds390/gen.c: minor fixes to make it work with new code
